--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "devspotlight",
+  "name": "finance-app",
+  "description": "A finance app built with Next.js and Tailwind CSS",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "6.6.0",
+    "next": "15.3.1",
+    "prisma": "^6.6.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
