--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "@clerk/nextjs": "^6.16.0",
     "@clerk/themes": "^2.2.34",
     "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "6.6.0",
+    "@prisma/client": "^6.6.0",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
+    "react-number-format": "^5.4.4",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.7",
